--- a/.github/workflows/Frontend-app-ci.yml
+++ b/.github/workflows/Frontend-app-ci.yml
@@ -41,6 +41,7 @@ jobs:
           IMAGE_TAG="${SAFE_REPO}-${SHORT_SHA}"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY" >> $GITHUB_ENV
+          echo "::set-output name=image_tag::$IMAGE_TAG"
 
       - name: SonarCloud Static Code Scan
         uses: SonarSource/sonarcloud-github-action@v2
@@ -50,10 +51,11 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Wait for SonarCloud Quality Gate result
-        continue-on-error: true
+        continue-on-error: false
         working-directory: app/frontend-src
         run: |
           echo "Waiting for SonarCloud analysis to complete..."
+
           sleep 10
 
           if [[ ! -f .scannerwork/report-task.txt ]]; then
@@ -74,6 +76,7 @@ jobs:
             STATUS=$(curl -s -u "${{ secrets.SONAR_TOKEN }}:" \
               "https://sonarcloud.io/api/ce/task?id=$ANALYSIS_ID" \
               | jq -r '.task.status')
+
             echo "Status: $STATUS"
             [[ "$STATUS" == "SUCCESS" ]] && break
             sleep 10
@@ -83,23 +86,15 @@ jobs:
             "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${{ env.SONAR_PROJECT_KEY }}" \
             | jq -r '.projectStatus.status')
 
-          COVERAGE=$(curl -s -u "${{ secrets.SONAR_TOKEN }}:" \
-            "https://sonarcloud.io/api/measures/component?component=${{ env.SONAR_PROJECT_KEY }}&metricKeys=coverage" \
-            | jq -r '.component.measures[0].value')
-
           if [[ "$PROJECT_STATUS" == "null" || -z "$PROJECT_STATUS" ]]; then
             echo "ERROR: Unable to retrieve project quality gate status."
             exit 1
           fi
 
           echo "Quality Gate Status: $PROJECT_STATUS"
-          echo "Coverage: ${COVERAGE}%"
 
           if [[ "$PROJECT_STATUS" != "OK" ]]; then
             echo "Quality Gate failed"
-            if [[ "$COVERAGE" != "null" && $(echo "$COVERAGE < 80" | bc -l) -eq 1 ]]; then
-              echo "Code coverage is less than 80%: $COVERAGE%"
-            fi
             exit 1
           else
             echo "Quality Gate passed"
@@ -120,3 +115,12 @@ jobs:
           echo "Pushing Docker image to ECR"
           docker push $IMAGE_URI:$IMAGE_TAG
           docker push $IMAGE_URI:latest
+
+      - name: Trigger CD Workflow
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: Frontend CD Pipeline (EKS)
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: master
+          inputs: |
+            image_tag: ${{ steps.meta.outputs.image_tag }}
