--- a/.github/workflows/Frontend-app-ci.yml
+++ b/.github/workflows/Frontend-app-ci.yml
@@ -123,4 +123,5 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: master
           inputs: |
-            image_tag: ${{ steps.meta.outputs.image_tag }}
+            inputs: '{"image_tag": "${{ steps.meta.outputs.image_tag }}"}'
+
