--- a/.github/workflows/backend-app-ci.yml
+++ b/.github/workflows/backend-app-ci.yml
@@ -43,15 +43,23 @@ jobs:
           echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY" >> $GITHUB_ENV
           echo "::set-output name=image_tag::$IMAGE_TAG"
 
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Check Java version
+        run: java -version
+
       - name: SonarCloud scan with Maven
         working-directory: app/backend-src
         run: |
-            mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            ./mvnw verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
               -Dsonar.projectKey=chandrakatore2004_ecommerce-backend \
               -Dsonar.organization=chandrakatore2004 \
               -Dsonar.host.url=https://sonarcloud.io \
               -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-        
 
       - name: Wait for SonarCloud Quality Gate result
         continue-on-error: true
