--- a/.github/workflows/backend-app-ci.yml
+++ b/.github/workflows/backend-app-ci.yml
@@ -43,6 +43,12 @@ jobs:
           echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY" >> $GITHUB_ENV
           echo "::set-output name=image_tag::$IMAGE_TAG"
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: SonarCloud scan with Maven
         working-directory: app/backend-src
         run: |
