BackEnd CI/CD changes

--- a/app/backend-src/pom.xml
+++ b/app/backend-src/pom.xml
@@ -50,6 +50,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- FIX: Override vulnerable tomcat version -->
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<version>10.1.35</version>
+		</dependency>
 	</dependencies>
 
 	<build>
