--- a/.github/workflows/Backend-app-cd.yml
+++ b/.github/workflows/Backend-app-cd.yml
@@ -44,7 +44,7 @@ jobs:
         run: kubectl apply -f k8s-backend-deploy.yml
 
       - name: Wait for deployment rollout
-        run: kubectl rollout status deployment=ecommstorebackend --timeout=90s
+        run: kubectl rollout status deployment ecommstorebackend --timeout=90s
 
       - name: Debug pod if rollout failed
         if: failure()
