--- a/.github/workflows/Backend-app-cd.yml
+++ b/.github/workflows/Backend-app-cd.yml
@@ -44,10 +44,10 @@ jobs:
         run: kubectl apply -f k8s-backend-deploy.yml
 
       - name: Wait for deployment rollout
-        run: kubectl rollout status deployment ecommstorebackend --timeout=90s
+        run: kubectl rollout status deployment productsapideployment --timeout=90s
 
       - name: Debug pod if rollout failed
         if: failure()
         run: |
           kubectl get pods
-          kubectl describe pod $(kubectl get pods -l app=ecommbackend -o jsonpath="{.items[0].metadata.name}")
+          kubectl describe pod $(kubectl get pods -l app=products -o jsonpath="{.items[0].metadata.name}")
