--- a/app/backend-src/Dockerfile
+++ b/app/backend-src/Dockerfile
@@ -4,6 +4,6 @@ COPY target/products_api.jar  /usr/app/
 
 WORKDIR /usr/app/
 
-ENTRYPOINT ["java", "-jar", "products_api.jar"]
+ENTRYPOINT ["java", "--add-opens=java.base/java.io=ALL-UNNAMED", "-jar", "products_api.jar"]
 
 EXPOSE 8080
