--- a/.github/workflows/Frontend-app-ci.yml
+++ b/.github/workflows/Frontend-app-ci.yml
@@ -46,6 +46,7 @@ jobs:
         working-directory: app/frontend-src
         run: |
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+          REPO_SANITIZED=$(echo "${{ github.repository }}" | tr '/' '-')
           IMAGE_TAG="${{ github.repository }}-${SHORT_SHA}"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           docker build -t $IMAGE_TAG .
