--- a/.github/workflows/Frontend-app-ci.yml
+++ b/.github/workflows/Frontend-app-ci.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
           REPO_SANITIZED=$(echo "${{ github.repository }}" | tr '/' '-')
-          IMAGE_TAG="${{ github.repository }}-${SHORT_SHA}"
+          IMAGE_TAG="${REPO_SANITIZED}-${SHORT_SHA}"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           docker build -t $IMAGE_TAG .
 
