--- a/.github/workflows/Frontend-app-cd.yml
+++ b/.github/workflows/Frontend-app-cd.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
+    
+      - name: Verify AWS Identity
+        run: aws sts get-caller-identity
 
       - name: Set up kubeconfig for EKS
         run: |
