--- a/.github/workflows/Frontend-app-cd.yml
+++ b/.github/workflows/Frontend-app-cd.yml
@@ -29,6 +29,10 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
     
+      - name: Debug AWS identity
+        run: aws sts get-caller-identity
+        
+          
       - name: Verify AWS Identity
         run: aws sts get-caller-identity
 
