--- a/.github/workflows/Backend-app-ci.yml
+++ b/.github/workflows/Backend-app-ci.yml
@@ -1,4 +1,4 @@
-# ✅ Backend CI Workflow with OIDC, Trivy, SHA tagging
+# ✅ Backend CI Pipeline with OIDC + Trivy + SonarCloud
 name: Backend CI Pipeline
 
 on:
@@ -9,34 +9,51 @@ on:
       - 'app/backend-src/**'
   workflow_dispatch:
 
-env:
-  AWS_REGION: ap-south-1
-  ECR_REPOSITORY: ecommerce-backend
-  SONAR_PROJECT_KEY: chandrakatore2004_aws-eks-3tier-devops-demo
-
 permissions:
   id-token: write
   contents: read
+  actions: write
+
+env:
+  AWS_REGION: ap-south-1
+  AWS_DEFAULT_REGION: ap-south-1
+  ECR_REPOSITORY: ecommerce-backend
+  SONAR_PROJECT_KEY: chandrakatore2004_aws-eks-3tier-devops-demo
 
 jobs:
-  build-and-scan:
+  backend-ci:
     runs-on: [self-hosted, linux, qa]
 
     steps:
-      - name: Checkout code
+      - name: Checkout source code
         uses: actions/checkout@v4
-
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
+
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Set image tag variables
+        id: meta
+        run: |
+          SHORT_SHA=${GITHUB_SHA::7}
+          SAFE_REPO=$(echo "${GITHUB_REPOSITORY}" | tr '/' '-')
+          IMAGE_TAG="${SAFE_REPO}-${SHORT_SHA}"
+          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY"
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+          echo "::set-output name=image_tag=$IMAGE_TAG"
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Cache Maven dependencies
         uses: actions/cache@v3
@@ -56,40 +73,35 @@ jobs:
           mvn sonar:sonar \
             -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }} \
             -Dsonar.organization=chandrakatore2004 \
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+            -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-      - name: Check SonarCloud Quality Gate
-        run: $GITHUB_ACTION_PATH/script/check-quality-gate.sh "app/backend-src/target/sonar/report-task.txt" "300"
+      - name: SonarCloud Quality Gate check
+        continue-on-error: true
+        uses: sonarsource/sonarqube-quality-gate-action@master
+        with:
+          scanMetadataReportFile: app/backend-src/target/sonar/report-task.txt
+          pollingTimeoutSec: 300
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Create Docker image
+      - name: Build, scan, tag, and push Docker image
         working-directory: app/backend-src
         run: |
-          SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
-          REPO_SANITIZED=$(echo "${{ github.repository }}" | tr '/' '-')
-          IMAGE_TAG="${REPO_SANITIZED}-${SHORT_SHA}"
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          docker build -t $IMAGE_TAG .
+          echo "Building Docker image with tags: $IMAGE_TAG and latest"
+          docker build -t $IMAGE_URI:$IMAGE_TAG -t $IMAGE_URI:latest .
 
-      - name: Login to ECR
-        run: |
-          aws ecr get-login-password | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
+          echo "Scanning image with Trivy (HIGH/CRITICAL)"
+          trivy image --exit-code 1 --severity CRITICAL --no-progress $IMAGE_URI:$IMAGE_TAG
 
-      - name: Push Docker image to ECR
-        run: |
-          docker tag $IMAGE_TAG ${{ secrets.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
-          docker push ${{ secrets.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+          echo "Pushing Docker image to ECR"
+          docker push $IMAGE_URI:$IMAGE_TAG
+          docker push $IMAGE_URI:latest
 
-      - name: Scan Docker image with Trivy
-        run: |
-          trivy image --severity HIGH,CRITICAL ${{ secrets.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
-
-      - name: Trigger CD Pipeline
+      - name: Trigger CD Workflow
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: Backend CD Pipeline (EKS)
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           ref: main
-          inputs: '{"image_tag": "${{ env.IMAGE_TAG }}"}'
+          inputs: '{"image_tag": "${{ steps.meta.outputs.image_tag }}"}'
