--- a/.github/workflows/Backend-app-ci.yml
+++ b/.github/workflows/Backend-app-ci.yml
@@ -47,7 +47,7 @@ jobs:
           IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
-          echo "::set-output name=image_tag=$IMAGE_TAG"
+          echo "::set-output name=image_tag::$IMAGE_TAG"
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -105,5 +105,7 @@ jobs:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           ref: master
           inputs: '{"image_tag": "${{ steps.meta.outputs.image_tag }}"}'
+
+
 
           
