--- a/app/backend-src/src/main/resources/application.properties
+++ b/app/backend-src/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://ashokit-ecomm-db.cdkca2wmw7j2.ap-south-1.rds.amazonaws.com:3306/ashokit_ecomm
+spring.datasource.url=jdbc:mysql://ashokit-ecomm-db.cb2iyukew6pp.ap-south-1.rds.amazonaws.com:3306/ashokit_ecomm
 spring.datasource.username=admin
 spring.datasource.password=ashokit123
 spring.jpa.hibernate.ddl-auto=update
