--- a/app/frontend-src/k8s/Deployment.yml
+++ b/app/frontend-src/k8s/Deployment.yml
@@ -27,7 +27,7 @@ kind: Service
 metadata:
   name: frontendsvc
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: ecommstore
   ports:
