--- a/.github/workflows/Backend-app-cd.yml
+++ b/.github/workflows/Backend-app-cd.yml
@@ -1,27 +1,32 @@
-# ✅ Backend CD Pipeline with OIDC Authentication
 name: Backend CD Pipeline (EKS)
-
-permissions:
-  id-token: write
-  contents: read
 
 on:
   workflow_dispatch:
     inputs:
       image_tag:
-        description: 'Docker Image Tag to deploy'
+        description: 'Docker image tag to deploy'
         required: true
+        type: string
+      namespace:
+        description: 'Kubernetes namespace to deploy to'
+        required: false
+        default: default
+        type: string
 
-env:
-  AWS_REGION: ap-south-1
-  ECR_REPOSITORY: ecommerce-backend
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
-  deploy-to-eks:
+  deploy:
     runs-on: [self-hosted, linux, qa]
 
+    env:
+      ECR_REPOSITORY: ecommerce-backend
+      AWS_REGION: ap-south-1
+
     steps:
-      - name: Checkout source
+      - name: Checkout source code
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials (OIDC)
@@ -30,31 +35,21 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Debug AWS identity
-        run: aws sts get-caller-identity
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Set up kubeconfig for EKS
+      - name: Set ECR Registry as ENV
         run: |
-          aws eks update-kubeconfig \
-            --region $AWS_REGION \
-            --name ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
+          echo "ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
 
-      - name: Render Kubernetes manifest
+      - name: Update Deployment image
+        working-directory: app/backend-src/k8s
         run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
-          FULL_IMAGE="$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:${{ github.event.inputs.image_tag }}"
-          export FULL_IMAGE
-          echo "Deploying Image: $FULL_IMAGE"
-          envsubst '${FULL_IMAGE}' < app/backend-src/k8s/Deployment.yml > k8s-backend-deploy.yml
+          sed -i "s|image:.*|image: $ECR_REGISTRY/$ECR_REPOSITORY:${{ inputs.image_tag }}|" Deployment.yml
 
-      - name: Deploy to EKS
-        run: kubectl apply -f k8s-backend-deploy.yml
-
-      - name: Wait for deployment rollout
-        run: kubectl rollout status deployment productsapideployment --timeout=90s
-
-      - name: Debug pod if rollout failed
-        if: failure()
+      - name: Apply Kubernetes manifests
+        working-directory: app/backend-src/k8s
         run: |
-          kubectl get pods
-          kubectl describe pod $(kubectl get pods -l app=products -o jsonpath="{.items[0].metadata.name}")
+          kubectl apply -n ${{ inputs.namespace }} -f Deployment.yml
+          kubectl apply -n ${{ inputs.namespace }} -f Ingress.yml
