--- a/.github/workflows/Backend-app-ci.yml
+++ b/.github/workflows/Backend-app-ci.yml
@@ -1,10 +1,10 @@
-# ✅ Backend CI Pipeline with OIDC + Trivy + SonarCloud
 name: Backend CI Pipeline
 
 on:
   push:
     branches:
       - main
+      - develop
     paths:
       - 'app/backend-src/**'
   workflow_dispatch:
@@ -16,17 +16,25 @@ permissions:
 
 env:
   AWS_REGION: ap-south-1
-  AWS_DEFAULT_REGION: ap-south-1
   ECR_REPOSITORY: ecommerce-backend
   SONAR_PROJECT_KEY: chandrakatore2004_aws-eks-3tier-devops-demo
+  DEPLOY_NAMESPACE: develop
 
 jobs:
   backend-ci:
     runs-on: [self-hosted, linux, qa]
 
     steps:
-      - name: Checkout source code
+      - name: Checkout source
         uses: actions/checkout@v4
+
+      - name: Set deployment namespace
+        run: |
+          if [[ "${GITHUB_REF##*/}" == "develop" ]]; then
+            echo "DEPLOY_NAMESPACE=develop" >> $GITHUB_ENV
+          else
+            echo "DEPLOY_NAMESPACE=default" >> $GITHUB_ENV
+          fi
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v2
@@ -38,15 +46,13 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Set image tag variables
+      - name: Set image tag
         id: meta
         run: |
           SHORT_SHA=${GITHUB_SHA::7}
           SAFE_REPO=$(echo "${GITHUB_REPOSITORY}" | tr '/' '-')
           IMAGE_TAG="${SAFE_REPO}-${SHORT_SHA}"
-          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
           echo "::set-output name=image_tag::$IMAGE_TAG"
 
       - name: Set up JDK 17
@@ -76,7 +82,7 @@ jobs:
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-      - name: SonarCloud Quality Gate check
+      - name: Quality Gate Check
         continue-on-error: true
         uses: sonarsource/sonarqube-quality-gate-action@master
         with:
@@ -88,24 +94,18 @@ jobs:
       - name: Build, scan, tag, and push Docker image
         working-directory: app/backend-src
         run: |
-          echo "Building Docker image with tags: $IMAGE_TAG and latest"
-          docker build -t $IMAGE_URI:$IMAGE_TAG -t $IMAGE_URI:latest .
+          IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $IMAGE_URI -t ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:latest .
+          trivy image --exit-code 1 --severity CRITICAL --no-progress $IMAGE_URI
+          docker push $IMAGE_URI
+          docker push ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:latest
 
-          echo "Scanning image with Trivy (HIGH/CRITICAL)"
-          trivy image --exit-code 1 --severity CRITICAL --no-progress $IMAGE_URI:$IMAGE_TAG
-
-          echo "Pushing Docker image to ECR"
-          docker push $IMAGE_URI:$IMAGE_TAG
-          
-
-      - name: Trigger CD Workflow
+      - name: Trigger CD workflow
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: Backend CD Pipeline (EKS)
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          ref: master
-          inputs: '{"image_tag": "${{ steps.meta.outputs.image_tag }}"}'
-
-         
-
-          
+          ref: ${{ github.ref_name }}
+          inputs: |
+            image_tag: ${{ steps.meta.outputs.image_tag }}
+            namespace: ${{ env.DEPLOY_NAMESPACE }}
