--- a/app/backend-src/k8s/Deployment.yml
+++ b/app/backend-src/k8s/Deployment.yml
@@ -26,7 +26,7 @@ kind: Service
 metadata:
   name: productssvc
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: products
   ports:
