implimented the ingress

--- a/.github/workflows/Backend-app-ci.yml
+++ b/.github/workflows/Backend-app-ci.yml
@@ -107,5 +107,5 @@ jobs:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           ref: ${{ github.ref_name }}
           inputs: |
-            image_tag: ${{ steps.meta.outputs.image_tag }}
+            image_tag: '{"image_tag": "${{ steps.meta.outputs.image_tag }}"}'
             namespace: ${{ env.DEPLOY_NAMESPACE }}
