--- a/app/backend-src/k8s/Ingress.yml
+++ b/app/backend-src/k8s/Ingress.yml
@@ -2,14 +2,15 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: backend-ingress
+  namespace: develop
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /products
+          - path: /products(/|$)(.*)
             pathType: Prefix
             backend:
               service:
