--- a/app/backend-src/k8s/Ingress.yml
+++ b/app/backend-src/k8s/Ingress.yml
@@ -4,14 +4,14 @@ metadata:
   name: backend-ingress
   namespace: develop
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /products(/|$)(.*)
-            pathType: Prefix
+          - path: /products/(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: productssvc
