--- a/app/backend-src/k8s/Ingress.yml
+++ b/app/backend-src/k8s/Ingress.yml
@@ -1,21 +1,17 @@
+#app\backend-src\k8s\Ingress.yml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: backend-ingress
   namespace: develop
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /products
-            pathType: Prefix
-            backend:
-              service:
-                name: productssvc
-                port:
-                  number: 80
-          - path: /products/
+          - path: /products(/|$)(.*)
             pathType: Prefix
             backend:
               service:
