--- a/app/backend-src/k8s/Ingress.yml
+++ b/app/backend-src/k8s/Ingress.yml
@@ -1,18 +1,17 @@
-#app\backend-src\k8s\Ingress.yml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: backend-ingress
   namespace: develop
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
           - path: /products(/|$)(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: productssvc
