implimented the ingress

--- a/app/backend-src/k8s/Ingress.yml
+++ b/app/backend-src/k8s/Ingress.yml
@@ -3,15 +3,20 @@ kind: Ingress
 metadata:
   name: backend-ingress
   namespace: develop
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /products(/|$)(.*)
-            pathType: ImplementationSpecific
+          - path: /products
+            pathType: Prefix
+            backend:
+              service:
+                name: productssvc
+                port:
+                  number: 80
+          - path: /products/
+            pathType: Prefix
             backend:
               service:
                 name: productssvc
