--- a/app/frontend-src/k8s/Ingress.yml
+++ b/app/frontend-src/k8s/Ingress.yml
@@ -1,7 +1,9 @@
+# app/frontend-src/k8s/Ingress.yml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: frontend-ingress
+  namespace: develop
 spec:
   ingressClassName: nginx
   rules:
