implimented the ingress

--- a/.github/workflows/Frontend-app-ci.yml
+++ b/.github/workflows/Frontend-app-ci.yml
@@ -72,6 +72,8 @@ jobs:
           workflow: Frontend CD Pipeline (EKS)
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           ref: ${{ github.ref_name }}
-          inputs: |
-            image_tag: ${{ steps.meta.outputs.image_tag }}
-            namespace: ${{ env.DEPLOY_NAMESPACE }}
+          inputs: >-
+            {
+              "image_tag": "${{ steps.meta.outputs.image_tag }}",
+              "namespace": "${{ env.DEPLOY_NAMESPACE }}"
+            }  
