implimented the ingress

--- a/app/frontend-src/k8s/Ingress.yml
+++ b/app/frontend-src/k8s/Ingress.yml
@@ -1,9 +1,10 @@
-# app/frontend-src/k8s/Ingress.yml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: frontend-ingress
   namespace: develop
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
