--- a/.github/workflows/terraform-tfsec.yml
+++ b/.github/workflows/terraform-tfsec.yml
@@ -16,12 +16,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Create virtual environment & install sarif-tools
+      - name: Install sarif-tools (Python CLI)
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-venv
-          python3 -m venv sarifenv
-          ./sarifenv/bin/pip install --no-cache-dir sarif-tools
+          python3 -m venv venv
+          ./venv/bin/pip install --no-cache-dir sarif-tools
 
       - name: Run tfsec scan (Plain Text)
         run: |
@@ -40,9 +40,9 @@ jobs:
           cd terraform
           tfsec --format sarif --out tfsec-results.sarif || true
 
-      - name: Convert SARIF to HTML Report
+      - name: Convert SARIF to HTML
         run: |
-          ./sarifenv/bin/python3 -m sarif.tools html terraform/tfsec-results.sarif --output terraform/tfsec-report/index.html
+          ./venv/bin/sarif-to-html terraform/tfsec-results.sarif --output terraform/tfsec-report/index.html
 
       - name: Upload tfsec HTML Report
         uses: actions/upload-artifact@v4
